--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/jrjensen14/note-taker#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "uuidv1": "^1.6.14"
   },
   "devDependencies": {}
 }
